overflow in the x-direction is fixed with this change...

--- a/src/scss/components/team/_team.scss
+++ b/src/scss/components/team/_team.scss
@@ -1,7 +1,6 @@
 .team {
   text-align: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   &__title-area {
     display: inline-block;
     position: relative;
